Layout on mobile fixed

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -437,14 +437,14 @@
 
    .center-image img {
    max-width: 95%;
-   margin-top: 1rem !important;
+   margin-top: 5rem !important;
    height: auto;
  }
      .circuit-container {
     display: none;
    }
    .blog-section {
-     padding: 60px 20px;
+     padding: 10px 10px;
    }
 
    .blog-title {
@@ -467,7 +467,7 @@
    }
 
    .articles-grid {
-    max-width: 90%;
+    max-width: 95%;
    }
 
    .article-media {
@@ -476,11 +476,11 @@
    }
 
    .article-header {
-     padding: 20px 20px 15px;
+     padding: 10px 10px 10px;
    }
 
    .article-content {
-     padding: 0 20px 20px;
+     padding: 0 10px 10px;
    }
 
    .article-title {
@@ -488,7 +488,7 @@
    }
 
    .tag {
-    max-width: 120px;
+    max-width: 100px;
 }
 
 
